--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>>
 <body>
 <h1>Hello World</h1>
-<p>I am Muhammad Usama Navid.</p>
+<p class="serif">I am Muhammad Usama Navid.</p>
 </body>
 </html>
