--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="index.css">
-</head>>
+</head>
 <body>
 <h1>Hello World</h1>
 <p class="serif">I am Muhammad Usama Navid.</p>
