--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-<h1>Hello World</h1>
+<h1 style="font-size:10vw">Hello World</h1>
 <p class="sansserif">I am Muhammad Usama Navid.</p>
 </body>
 </html>
