--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-	<link rel="stylesheet" type="text/css" href="index.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <title>Usama Naveed</title>
 </head>
+
 <body>
-<h1>Hello World</h1>
-<p class="sansserif">I am Muhammad Usama Navid.</p>
-<p p.small>I did nohing special today.</p>
+
+    <h1>Hey Guys!</h1>
+    <div>
+        <p class="para1">I am Muhammad Usama Navid.</p>
+
+        <p p.small>I did nothing special today.</p>
+    </div>
 </body>
+
 </html>
