usama navid's index.html updated

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+	
 <head>
+	<meta name="viewport" content"width=device-width , initial-scale=0">
+	<meta chrset="UTF-8">
+	<title>Usama Navid</title>
 	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-<h1>Hello World</h1>
-<p class="sansserif">I am Muhammad Usama Navid.</p>
-<p p.small>I did nohing special today.</p>
+	<h1><i>USAMA NAVID<i></h1>
+	<p class="sansserif">I am emerging Comuter Scientist</p>
+	<p class="small">Meet me at UET</p>
+	<p class="small">Usama Navid : UET Lahore , Punjab , Pakistan </p>
+
 </body>
-</html>
+</html> 
