--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!--====== Title ======-->
-    <title>Unfold - Personal Portfolio & CV Template</title>
+    <title>Usama</title>
 
     <!--====== Favicon Icon ======-->
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/png">
@@ -125,15 +125,15 @@
                     <div class="col-xl-5 col-lg-6">
                         <div class="header-content-right">
                             <h4 class="sub-title">Hello, I’m</h4>
-                            <h1 class="title">Mark Parker</h1>
-                            <p>A Freelance UI Designer & Web Developer</p>
+                            <h1 class="title">Muhammad Usama Navid</h1>
+                            <p>A Mechanical Engineering Junior</p>
                             <a class="main-btn" href="#work">View my Work</a>
                         </div> <!-- header content right -->
                     </div>
                     <div class="col-lg-6 offset-xl-1">
                         <div class="header-image d-none d-lg-block">
                             <img src="assets/images/banner/hero.png" alt="hero">
-                        </div> <!-- header image -->
+                        </div> <!-- header image size -->
                     </div>
                 </div> <!-- row -->
             </div> <!-- container -->
@@ -166,15 +166,15 @@
                 <div class="col-lg-8">
                     <div class="section-title text-center">
                         <h2 class="title">About Me</h2>
-                        <p>Nunc id dui at sapien faucibus fermentum ut vel diam. Nullam tempus, nunc id efficitur sagittis, urna est ultricies eros, ac porta sem turpis quis leo.</p>
+                        <p>I am studying Mecahical Engineering at University of Engineering and Technology Lahore.</p>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
             <div class="row">
                 <div class="col-lg-6">
                     <div class="about-content mt-50">
-                        <h5 class="about-title">Hi There! I'm Mark Parker</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <h5 class="about-title">Hi There! I'm Muhammad Usama Navid</h5>
+                        <p>Geek | Mechanical Engineering Student | Mech & Tech </p>
                         <ul class="clearfix">
                             <li>
                                 <div class="single-info d-flex align-items-center">
@@ -182,7 +182,7 @@
                                         <i class="lni-calendar"></i>
                                     </div>
                                     <div class="info-text">
-                                        <p><span>Date of birth:</span> 8 June 1995</p>
+                                        <p><span>Date of birth:</span> 17 August 1999</p>
                                     </div>
                                 </div> <!-- single info -->
                             </li>
@@ -192,7 +192,7 @@
                                         <i class="lni-envelope"></i>
                                     </div>
                                     <div class="info-text">
-                                        <p><span>Email:</span> parker@mysite.com</p>
+                                        <p><span>Email:</span> muqadir1@gmail.com.com</p>
                                     </div>
                                 </div> <!-- single info -->
                             </li>
@@ -202,7 +202,7 @@
                                         <i class="lni-phone-handset"></i>
                                     </div>
                                     <div class="info-text">
-                                        <p><span>Phone:</span> +1-202-555-0138</p>
+                                        <p><span>Phone:</span> +92-316-653-1625</p>
                                     </div>
                                 </div> <!-- single info -->
                             </li>
@@ -212,7 +212,7 @@
                                         <i class="lni-map-marker"></i>
                                     </div>
                                     <div class="info-text">
-                                        <p><span>Location:</span> 4373, El Centro, CA</p>
+                                        <p><span>Location:</span> UET Lahore, GT Road Lahore</p>
                                     </div>
                                 </div> <!-- single info -->
                             </li>
