--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                                         <i class="lni-envelope"></i>
                                     </div>
                                     <div class="info-text">
-                                        <p><span>Email:</span> muqadir1@gmail.com.com</p>
+                                        <p><span>Email:</span> muqadir1@gmail.com</p>
                                     </div>
                                 </div> <!-- single info -->
                             </li>
