--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
                         <div class="col-lg-12">
                             <div class="header-social-icon">
                                 <ul>
-                                    <li><a href="#"><i class="lni-facebook-filled"></i></a></li>
-                                    <li><a href="#"><i class="lni-twitter-original"></i></a></li>
-                                    <li><a href="#"><i class="lni-behance-original"></i></a></li>
-                                    <li><a href="#"><i class="lni-linkedin-original"></i></a></li>
+                                    <li><a href="https://www.facebook.com/muqadir1/"><i class="lni-facebook-filled"></i></a></li>
+                                    <li><a href="https://www.twitter.com/muqadir1/"><i class="lni-twitter-original"></i></a></li>
+                                    <li><a href="https://www.behance.com/muqadir1/"><i class="lni-behance-original"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/in/muqadir1/"><i class="lni-linkedin-original"></i></a></li>
                                 </ul>
                             </div> <!-- header social -->
                         </div>
