--- a/index.html
+++ b/index.html
@@ -223,10 +223,10 @@
                     <div class="about-skills pt-25">
                         <div class="skill-item mt-25">
                             <div class="skill-header">
-                                <h6 class="skill-title">HTML</h6>
+                                <h6 class="skill-title">LaTeX</h6>
                                 <div class="skill-percentage">
                                     <div class="count-box counted">
-                                        <span class="counter">80</span>
+                                        <span class="counter">90</span>
                                     </div>
                                     %
                                 </div>
@@ -239,10 +239,10 @@
                         </div> <!-- skill item -->
                         <div class="skill-item mt-25">
                             <div class="skill-header">
-                                <h6 class="skill-title">CSS</h6>
+                                <h6 class="skill-title">Microsft Office</h6>
                                 <div class="skill-percentage">
                                     <div class="count-box counted">
-                                        <span class="counter">60</span>
+                                        <span class="counter">100</span>
                                     </div>
                                     %
                                 </div>
@@ -255,7 +255,39 @@
                         </div> <!-- skill item -->
                         <div class="skill-item mt-25">
                             <div class="skill-header">
-                                <h6 class="skill-title">Photoshop</h6>
+                                <h6 class="skill-title">Matlab</h6>
+                                <div class="skill-percentage">
+                                    <div class="count-box counted">
+                                        <span class="counter">60</span>
+                                    </div>
+                                    %
+                                </div>
+                            </div>
+                            <div class="skill-bar">
+                                <div class="bar-inner">
+                                    <div class="bar progress-line" data-width="50"></div>
+                                </div>
+                            </div>
+                        </div> <!-- skill item -->
+                        <div class="skill-item mt-25">
+                            <div class="skill-header">
+                                <h6 class="skill-title">Solid works</h6>
+                                <div class="skill-percentage">
+                                    <div class="count-box counted">
+                                        <span class="counter">40</span>
+                                    </div>
+                                    %
+                                </div>
+                            </div>
+                            <div class="skill-bar">
+                                <div class="bar-inner">
+                                    <div class="bar progress-line" data-width="50"></div>
+                                </div>
+                            </div>
+                        </div> <!-- skill item -->
+                        <div class="skill-item mt-25">
+                            <div class="skill-header">
+                                <h6 class="skill-title">Python</h6>
                                 <div class="skill-percentage">
                                     <div class="count-box counted">
                                         <span class="counter">50</span>
@@ -271,7 +303,7 @@
                         </div> <!-- skill item -->
                         <div class="skill-item mt-25">
                             <div class="skill-header">
-                                <h6 class="skill-title">Sketch</h6>
+                                <h6 class="skill-title">Auto CAD</h6>
                                 <div class="skill-percentage">
                                     <div class="count-box counted">
                                         <span class="counter">90</span>
