--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
                 <div class="col-lg-8">
                     <div class="section-title text-center pb-25">
                         <h2 class="title">Get In Touch</h2>
-                        <p>Nunc id dui at sapien faucibus fermentum ut vel diam. Nullam tempus, nunc id efficitur sagittis, urna est ultricies eros, ac porta sem turpis quis leo.</p>
+                        <p>I am available on almost every famous socail media with username "muqadir1" except twitter where my user name is "muqadir1t". But to get quick reply contact through email or LinkedIn.</p>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
@@ -729,7 +729,7 @@
                         </div>
                         <div class="contact-content">
                             <h6 class="contact-title">Address</h6>
-                            <p>123 Stree New York City , United States Of America 750</p>
+                            <p>Room 187 Liaqat Hall, UET Lahore Pakistan</p>
                         </div>
                     </div> <!-- contact box -->
                 </div>
@@ -740,8 +740,8 @@
                         </div>
                         <div class="contact-content">
                             <h6 class="contact-title">Phone</h6>
-                            <p>+931 2222 5555</p>
-                            <p>+547 5554 6663</p>
+                            <p>+9231 6653 1625</p>
+                            
                         </div>
                     </div> <!-- contact box -->
                 </div>
@@ -752,8 +752,8 @@
                         </div>
                         <div class="contact-content">
                             <h6 class="contact-title">Email</h6>
-                            <p>support@yourmail.com</p>
-                            <p>info@helpline.com</p>
+                            <p>muqadir1@gmail.com</p>
+                            <p>2017me62@student.uet.edu.pk</p>
                         </div>
                     </div> <!-- contact box -->
                 </div>
