--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@
                 <div class="col-lg-6">
                     <div class="contact-map mt-60">
                         <div class="gmap_canvas">                            
-                            <iframe id="gmap_canvas" src="https://maps.google.com/maps?q=university%20of%20%20engineering%20and%20Technology%20Lahore&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                            <iframe id="gmap_canvas" src="https://www.google.com/maps/embed?pb=!1m19!1m8!1m3!1d5043.877216775222!2d74.34970867868637!3d31.580441012271454!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m5!1s0x39191b23f013f56d%3A0x88ab03a2b3a169a5!2sLiaquat%20Hall!3m2!1d31.5813587!2d74.35205739999999!4m0!5e0!3m2!1sen!2sus!4v1571899577330!5m2!1sen!2sus" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
                         </div>
                     </div> <!-- contact map -->
                 </div>
@@ -819,7 +819,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="copyright-text text-center pt-20">
-                            <p>Copyright © 2022. Template Crafted by <a href="https://uideck.com" rel="nofollow">UIdeck</a></p>
+                            <p>Copyright © 2022. Special Thanks to <a href="https://uideck.com" rel="nofollow">UIdeck</a></p>
                         </div> <!-- copyright text -->
                     </div>
                 </div> <!-- row -->
