--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@
                             <a href="index.html">
                                 <img src="assets/images/logo-2.png" alt="Logo">
                             </a>
-                            <p class="mt-">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci- didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exe- rcitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <p class="mt-">Most of the people ask me why are you using the word "muqadir1" as your username. I use this username because it is unique. Knowing this usename you can easily find me on almost every famous socail media by just typing my username on Google.</p>
                             <ul>
                                 <li><a href="https://www.facebook.com/muqadir1/"><i class="lni-facebook-filled"></i></a></li>
                                 <li><a href="https://www.twitter.com/muqadir1/"><i class="lni-twitter-original"></i></a></li>
