--- a/index.html
+++ b/index.html
@@ -332,8 +332,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="section-title text-center pb-30">
-                        <h2 class="title">My Services</h2>
-                        <p>Nunc id dui at sapien faucibus fermentum ut vel diam. Nullam tempus, nunc id efficitur sagittis, urna est ultricies eros, ac porta sem turpis quis leo.</p>
+                        <h2 class="title">My Intrests</h2>
+                        <p>It has been almost 2 years since I got my first Laptop/PC. Since then my intrest for technology started. Now I am practicing some pillars of industrail revolution four. Technology is ging to be completely changed in the near future. I need to be prepaired for that. Here are the domains that I am intrested in.</p>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
