--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-8">
                     <div class="single-service text-center mt-30">
                         <div class="service-icon">
-                            <i class="lni-color-pallet"></i>
+                            <i class="lni-laptop-phone"></i>
                         </div>
                         <div class="service-content">
                             <h4 class="service-title"><a href="#contact">Graphic Design</a></h4>
@@ -420,7 +420,7 @@
                         <h2 class="action-title">Have any project on mind?</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua nostrud.</p>
                         <ul>
-                            <li><a class="main-btn custom" href="https://github.com/muqadir1/muqadir1.github.io/raw/master/assets/CV/Muhammad%20Usama%20Navid%20CV%20V2.pdf">download cv</a></li>
+                            <li><a class="main-btn custom" href="https://github.com/muqadir1/muqadir1.github.io/raw/master/assets/cv/CV%20Muhammad%20Usama%20Navid.pdf">download cv</a></li>
                             <li><a class="main-btn custom-2" href="mailto:muqadir1@gmail.com?Subject=You%20have%20been%20hired.">hire me</a></li>
                         </ul>
                     </div> <!-- call action content -->
@@ -805,7 +805,7 @@
                             <p class="mt-">Most of the people ask me why are you using the word "muqadir1" as your username. I use this username because it is unique. Knowing this usename you can easily find me on almost every famous socail media by just typing my username on Google.</p>
                             <ul>
                                 <li><a href="https://www.facebook.com/muqadir1/"><i class="lni-facebook-filled"></i></a></li>
-                                <li><a href="https://www.twitter.com/muqadir1/"><i class="lni-twitter-original"></i></a></li>
+                                <li><a href="https://www.twitter.com/muqadir1t/"><i class="lni-twitter-original"></i></a></li>
                                 <li><a href="https://www.pintrest.com/muqadir1/"><i class="lni-pinterest"></i></a></li>
                                 <li><a href="https://www.linkedin.com/in/muqadir1/"><i class="lni-linkedin-original"></i></a></li>
                             </ul>
@@ -819,7 +819,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="copyright-text text-center pt-20">
-                            <p>Copyright © 2022. Special Thanks to <a href="https://uideck.com" rel="nofollow">UIdeck</a></p>
+                            <p>Copyright © 2022. Template from <a href="https://uideck.com" rel="nofollow">UIdeck</a></p>
                         </div> <!-- copyright text -->
                     </div>
                 </div> <!-- row -->
