--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="blog-more text-center mt-50">
-                        <a class="main-btn" href="#">More posts</a>
+                        <a class="main-btn" href="ustadee.com">More posts</a>
                     </div> <!-- blog more -->
                 </div>
             </div> <!-- row -->
@@ -717,7 +717,7 @@
                 <div class="col-lg-8">
                     <div class="section-title text-center pb-25">
                         <h2 class="title">Get In Touch</h2>
-                        <p>I am available on almost every famous socail media with username "muqadir1" except twitter where my user name is "muqadir1t". But to get quick reply contact through email or LinkedIn.</p>
+                        <p>I am available on almost every socail media with username "muqadir1" except twitter where my user name is "muqadir1t". But to get quick reply contact through email or LinkedIn.</p>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
