--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                         </div>
                         <div class="service-content">
                             <h4 class="service-title"><a href="#">Web Design</a></h4>
-                            <p>Curabitur vitae magna felis. Nulla ac libero ornare, vestibulum lacus quis blandit enimdicta sunt.</p>
+                            <p>This is just a placeholder text. I will change it to something else. Just did not wanted to use Lorem Ipsum text.</p>
                         </div>
                     </div> <!-- single service -->
                 </div>
@@ -356,7 +356,7 @@
                         </div>
                         <div class="service-content">
                             <h4 class="service-title"><a href="#contact">Graphic Design</a></h4>
-                            <p>Curabitur vitae magna felis. Nulla ac libero ornare, vestibulum lacus quis blandit enimdicta sunt.</p>
+                            <p>This is just a placeholder text. I will change it to something else. Just did not wanted to use Lorem Ipsum text.</p>
                         </div>
                     </div> <!-- single service -->
                 </div>
@@ -367,7 +367,7 @@
                         </div>
                         <div class="service-content">
                             <h4 class="service-title"><a href="#">App Design</a></h4>
-                            <p>Curabitur vitae magna felis. Nulla ac libero ornare, vestibulum lacus quis blandit enimdicta sunt.</p>
+                            <p>This is just a placeholder text. I will change it to something else. Just did not wanted to use Lorem Ipsum text.</p>
                         </div>
                     </div> <!-- single service -->
                 </div>
@@ -378,7 +378,7 @@
                         </div>
                         <div class="service-content">
                             <h4 class="service-title"><a href="#">Illustration Design</a></h4>
-                            <p>Curabitur vitae magna felis. Nulla ac libero ornare, vestibulum lacus quis blandit enimdicta sunt.</p>
+                            <p>This is just a placeholder text. I will change it to something else. Just did not wanted to use Lorem Ipsum text.</p>
                         </div>
                     </div> <!-- single service -->
                 </div>
@@ -389,7 +389,7 @@
                         </div>
                         <div class="service-content">
                             <h4 class="service-title"><a href="#">Web Development</a></h4>
-                            <p>Curabitur vitae magna felis. Nulla ac libero ornare, vestibulum lacus quis blandit enimdicta sunt.</p>
+                            <p>This is just a placeholder text. I will change it to something else. Just did not wanted to use Lorem Ipsum text.</p>
                         </div>
                     </div> <!-- single service -->
                 </div>
@@ -400,7 +400,7 @@
                         </div>
                         <div class="service-content">
                             <h4 class="service-title"><a href="#">Consultancy and Support</a></h4>
-                            <p>Curabitur vitae magna felis. Nulla ac libero ornare, vestibulum lacus quis blandit enimdicta sunt.</p>
+                            <p>This is just a placeholder text. I will change it to something else. Just did not wanted to use Lorem Ipsum text.</p>
                         </div>
                     </div> <!-- single service -->
                 </div>
@@ -430,7 +430,7 @@
     </section>
 
     <!--====== CALL TO ACTION PART ENDS ======-->
-    
+
     <!--====== BLOG PART START ======-->
 
     <section id="blog" class="blog-area pt-125 pb-130">
