--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                             <img src="assets/images/blog/b-1.jpg" alt="Blog">
                         </div>
                         <div class="blog-content">
-                            <h4 class="blog-title"><a href="http://ustadee.com/technology/india-is-one-step-closer-to-making-the-%e2%80%8eworlds-first-fully-functional-hyperloop-%e2%80%8etransportation-system">Hyperloop in India.</a></h4>
+                            <h4 class="blog-title"><a href="http://ustadee.com/technology/india-is-one-step-closer-to-making-the-%e2%80%8eworlds-first-fully-functional-hyperloop-%e2%80%8etransportation-system">India is one step closer to Hyperloop.</a></h4>
                             <span>August 2, 2019</span>
                         </div>
                     </div> <!-- single blog -->
@@ -461,7 +461,7 @@
                             <img src="assets/images/blog/b-2.jpg" alt="Blog">
                         </div>
                         <div class="blog-content">
-                            <h4 class="blog-title"><a href="http://ustadee.com/databases/sql-for-data-science-01">Geetig started with SQL?</a></h4>
+                            <h4 class="blog-title"><a href="http://ustadee.com/databases/sql-for-data-science-01">Getting started with SQL for data-science.</a></h4>
                             <span>July 30, 2019</span>
                         </div>
                     </div> <!-- single blog -->
@@ -481,7 +481,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="blog-more text-center mt-50">
-                        <a class="main-btn" href="ustadee.com">More posts</a>
+                        <a class="main-btn" href="www.ustadee.com">More posts</a>
                     </div> <!-- blog more -->
                 </div>
             </div> <!-- row -->
