--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                 <ul class="navbar-nav ml-auto">
                                     <li class="nav-item active"><a class="page-scroll" href="#home">Home</a></li>
                                     <li class="nav-item"><a class="page-scroll" href="#about">About</a></li>
-                                    <li class="nav-item"><a class="page-scroll" href="#service">Services</a></li>
+                                    <li class="nav-item"><a class="page-scroll" href="#Intre">Interests</a></li>
                                     <li class="nav-item"><a class="page-scroll" href="#work">Portfolio</a></li>
                                     <li class="nav-item"><a class="page-scroll" href="#blog">Blog</a></li>
                                     <li class="nav-item"><a class="page-scroll" href="#contact">Contact</a></li>
@@ -332,7 +332,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="section-title text-center pb-30">
-                        <h2 class="title">My Intrests</h2>
+                        <h2 class="title">My Interests</h2>
                         <p>It has been almost 2 years since I got my first Laptop/PC. Since then my intrest for technology started. Now I am practicing some pillars of industrail revolution four. Technology is ging to be completely changed in the near future. I need to be prepaired for that. Here are the domains that I am intrested in.</p>
                     </div> <!-- section title -->
                 </div>
