--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="copyright-text text-center pt-20">
-                            <p>Copyright © 2022. Template from <a href="https://uideck.com" rel="nofollow">UIdeck</a></p>
+                            <p>Copyright © 2022. Thanks <a href="https://uideck.com" rel="nofollow">UIdeck</a></p>
                         </div> <!-- copyright text -->
                     </div>
                 </div> <!-- row -->
