--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>Muhammad Usama Navid</h1>
-							<p>Mechanical Engineering Junior</p>
-							<p>Mechine Learning Enthusiast</p>
+							<p>Mechanical Engineering Junior<br>Mechine Learning Enthusiast</p>
 						</header>
 						<!--
 						<hr />
