--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<div id="wrapper">
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
+							<span class="avatar"><img src="images/avatar.png" alt="" /></span>
 							<h1>Muhammad Usama Navid</h1>
 							<p>Mechanical Engineering Junior<br>Mechine Learning Enthusiast</p>
 						</header>
@@ -55,7 +55,7 @@
 						<footer>
 							<ul class="icons">
 								<li><a href="#" class="icon brands fa-twitter">Twitter</a></li>
-								<li><a href="#" class="icon brands fa-instagram">Instagram</a></li>
+								<li><a href="#" class="icon brands fa-linkedin">Instagram</a></li>
 								<li><a href="#" class="icon brands fa-facebook-f">Facebook</a></li>
 							</ul>
 						</footer>
