--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 						-->
 						<footer>
 							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter">Twitter</a></li>
-								<li><a href="#" class="icon brands fa-linkedin">Instagram</a></li>
-								<li><a href="#" class="icon brands fa-facebook-f">Facebook</a></li>
+								<li><a href="https:github.com/muqadir1" class="icon brands fa-github">Github</a></li>
+								<li><a href="https://www.linkedin.com/in/muqadir1/" class="icon brands fa-linkedin">Linkedin</a></li>
+								<li><a href="https://www.facebook.com/muqadir1" class="icon brands fa-facebook-f">Facebook</a></li>
 							</ul>
 						</footer>
 					</section>
