--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							<ul class="icons">
 								<li><a href="https://www.github.com/muqadir1" class="icon brands fa-github">Github</a></li>
 								<li><a href="https://www.linkedin.com/in/muqadir1/" class="icon brands fa-linkedin">Linkedin</a></li>
-								<li><a href="https://www.facebook.com/muqadir1" class="icon brands fa-facebook-f">Facebook</a></li>
+								<li><a href="https://www.facebook.com/concaption" class="icon brands fa-facebook-f">Facebook</a></li>
 							</ul>
 						</footer>
 					</section>
@@ -64,7 +64,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; muqadir1</li><li>Visit: <a href="http://ustadee.com/">Ustadee</a></li>
+							<li><a href="http://usamanavid.com/">@UsamaNavid.Com</a></li>
 						</ul>
 					</footer>
 
