--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 						-->
 						<footer>
 							<ul class="icons">
-								<li><a href="https://www.github.com/muqadir1" class="icon brands fa-github">Github</a></li>
-								<li><a href="https://www.linkedin.com/in/muqadir1/" class="icon brands fa-linkedin">Linkedin</a></li>
+								<li><a href="https://www.github.com/concaption" class="icon brands fa-github">Github</a></li>
+								<li><a href="https://www.linkedin.com/in/concaption/" class="icon brands fa-linkedin">Linkedin</a></li>
 								<li><a href="https://www.facebook.com/concaption" class="icon brands fa-facebook-f">Facebook</a></li>
 							</ul>
 						</footer>
